Actually fixed mobile cutting off issue

--- a/css/index.css
+++ b/css/index.css
@@ -5,14 +5,14 @@ html, button, input, select, textarea,
 }
 
 html {
-    background-image: url("../imgs/poly.jpg");
-    background-repeat: no-repeat;
-    background-position: top;
     font-size: 23px;
 }
 
 body {
     background-color: #FFFFFF;
+    background-image: url("../imgs/poly.jpg");
+    background-repeat: no-repeat;
+    background-position: top;
 }
 
 p {
@@ -28,17 +28,13 @@ h1 {
 }
 
 #sectionHeader {
-    height: 100%;
-
     text-align: center;
+    margin: 10% auto 0 auto;
+    height: 100%;
 }
 
 #headerText {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    /*text-shadow: 0px 0px 10px #A04657;*/
+    margin-top: 5%;
 }
 
 .btn {
